prover-ray/zkcdriver/testdata/synced/invalid/cast_02.zkc
//error:3:17-26:cast overflow
const BIG:u16 = 0x1234
const MASK:u8 = BIG as u8

pub input data(address:u16) -> (byte:u8)
pub output result(address:u16) -> (byte:u8)

fn main() {
  result[0] = data[0] & MASK
  return
}
